alignment specific changes
The profile width is set to 100%.
signup.ejs is centered.
Updated login.ejs to 1.4.9 angular js

--- a/public/profile.html
+++ b/public/profile.html
@@ -1,6 +1,7 @@
-<md-content layout-padding="" style="overflow: hidden;">
+<div layout="row" layout-align="center center" style="width: 100%;">
+    <md-content layout-padding="" style="overflow: hidden;">
 
-    <div>
+    <div >
         <form name="userForm">
             <div layout-gt-sm="row">
                 <md-input-container class="md-block" flex-gt-sm="">
@@ -79,3 +80,4 @@
 
 
 </md-content>
+</div>
