--- a/public/profile.html
+++ b/public/profile.html
@@ -3,15 +3,23 @@
 
     <div >
         <form name="userForm">
+            <div class="bottom-sheet-demo inset" layout="row" layout-sm="column" layout-align="center" >
+                <md-button class="md-raised md-warn" ng-click="editableInput=true">EDIT</md-button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <md-button class="md-raised " ng-click="editableInput=false">SAVE</md-button>
+            </div>
             <div layout-gt-sm="row">
-                <md-input-container class="md-block" flex-gt-sm="">
+                <md-input-container class="md-block" flex-gt-xs="">
                     <label>First name</label>
-                    <input ng-model="user.firstName">
+                    <input ng-model="user.firstName" ng-disabled="!editableInput">
                 </md-input-container>
 
                 <md-input-container class="md-block" flex-gt-sm="">
                     <label>Last Name</label>
-                    <input ng-model="theMax">
+                    <input ng-model="theMax" ng-disabled="!editableInput">
                 </md-input-container>
             </div>
 
@@ -19,10 +27,10 @@
             <div layout-gt-xs="row">
                 <md-input-container class="md-block" flex-gt-xs="">
                     <label>Company (Disabled)</label>
-                    <input ng-model="user.company" >
+                    <input ng-model="user.company" ng-disabled="!editableInput" >
                 </md-input-container>
 
-                <md-datepicker ng-model="user.submissionDate" md-placeholder="Date of Birth" >
+                <md-datepicker ng-model="user.submissionDate" md-placeholder="Date of Birth" ng-disabled="!editableInput" >
                 </md-datepicker>
             </div>
 
@@ -30,22 +38,22 @@
 
             <md-input-container class="md-block">
                 <label>Address Line 1</label>
-                <input ng-model="user.address">
+                <input ng-model="user.address" ng-disabled="!editableInput">
             </md-input-container>
 
             <md-input-container  class="md-block">
-                <input ng-model="user.address2" placeholder="Address Line 2">
+                <input ng-model="user.address2" placeholder="Address Line 2" ng-disabled="!editableInput">
             </md-input-container>
 
             <div layout-gt-sm="row">
                 <md-input-container class="md-block" flex-gt-sm="">
                     <label>City</label>
-                    <input ng-model="user.city">
+                    <input ng-model="user.city" ng-disabled="!editableInput">
                 </md-input-container>
 
                 <md-input-container class="md-block" flex-gt-sm="">
                     <label>State</label>
-                    <md-select ng-model="user.state">
+                    <md-select ng-model="user.state" ng-disabled="!editableInput">
                         <md-option ng-repeat="state in states" value="{{state.abbrev}}">
                             {{state.abbrev}}
                         </md-option>
@@ -54,7 +62,7 @@
 
                 <md-input-container class="md-block" flex-gt-sm="">
                     <label>Postal Code</label>
-                    <input name="postalCode" ng-model="user.postalCode" required="" ng-pattern="/^[0-9]{6}$/" md-maxlength="6">
+                    <input name="postalCode" ng-model="user.postalCode" required="" ng-pattern="/^[0-9]{6}$/" md-maxlength="6" ng-disabled="!editableInput">
 
                     <div ng-messages="userForm.postalCode.$error" role="alert" multiple="">
                         <div ng-message="required" class="my-message">You must supply a postal code.</div>
@@ -70,7 +78,7 @@
 
             <md-input-container class="md-block">
                 <label>Biography</label>
-                <textarea ng-model="user.biography" columns="1" md-maxlength="150" rows="5"></textarea>
+                <textarea ng-model="user.biography" columns="1" md-maxlength="150" rows="5" ng-disabled="!editableInput"></textarea>
             </md-input-container>
 
 
