--- a/public/profile.html
+++ b/public/profile.html
@@ -9,7 +9,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <md-button class="md-raised " ng-click="editableInput=false">SAVE</md-button>
+                <md-button class="md-raised " ng-click="editableInput=false; go();">SAVE</md-button>
             </div>
             <div layout-gt-sm="row">
                 <md-input-container class="md-block" flex-gt-xs="">
@@ -19,19 +19,44 @@
 
                 <md-input-container class="md-block" flex-gt-sm="">
                     <label>Last Name</label>
-                    <input ng-model="theMax" ng-disabled="!editableInput">
+                    <input ng-model="user.lastName" ng-disabled="!editableInput">
                 </md-input-container>
             </div>
 
-
             <div layout-gt-xs="row">
                 <md-input-container class="md-block" flex-gt-xs="">
-                    <label>Company (Disabled)</label>
-                    <input ng-model="user.company" ng-disabled="!editableInput" >
+                    <label>Mobile Number</label>
+                    <input name="mobileNumber" ng-model="user.mobileNumber" required="" ng-pattern="/^[0-9]{10}$/" md-maxlength="10" ng-disabled="!editableInput">
                 </md-input-container>
 
-                <md-datepicker ng-model="user.submissionDate" md-placeholder="Date of Birth" ng-disabled="!editableInput" >
+
+                <md-datepicker ng-model="user.dateOfBirth" md-placeholder="Date of Birth" ng-disabled="!editableInput" >
+                    <label>Date of Birth</label>
                 </md-datepicker>
+            </div>
+
+            <div layout-gt-xs="column">
+                <md-input-container class="md-block" flex-gt-xs="">
+                    <label>Father name</label>
+                    <input ng-model="user.fatherName" ng-disabled="!editableInput">
+                </md-input-container>
+
+                <md-input-container class="md-block" flex-gt-xs="">
+                    <label>Mother name</label>
+                    <input ng-model="user.motherName" ng-disabled="!editableInput">
+                </md-input-container>
+
+                <md-input-container class="md-block" flex-gt-xs="">
+                    <label>Intermediate</label>
+                    <input ng-model="user.interMediate" ng-disabled="!editableInput" >
+                </md-input-container>
+
+                <md-input-container class="md-block" flex-gt-xs="">
+                    <label>10th</label>
+                    <input ng-model="user.tenth" ng-disabled="!editableInput" >
+                </md-input-container>
+
+
             </div>
 
 
@@ -70,21 +95,21 @@
                             code.
                         </div>
                         <div ng-message="md-maxlength" class="my-message">
-                            Don't use the long version silly...we don't need to be that specific...
+                            Eh! Looks like you are giving a wrong PIN-CODE....!
                         </div>
                     </div>
                 </md-input-container>
             </div>
 
             <md-input-container class="md-block">
-                <label>Biography</label>
-                <textarea ng-model="user.biography" columns="1" md-maxlength="150" rows="5" ng-disabled="!editableInput"></textarea>
+                <label>Write about yourself</label>
+                <textarea ng-model="user.biography" columns="1" md-maxlength="300" rows="5" ng-disabled="!editableInput"></textarea>
             </md-input-container>
 
 
         </form>
     </div>
-    <md-button class="md-raised" id="SignupButton" ng-click="go()" >Button</md-button>
+
 
 
 </md-content>
