--- a/public/admin_default.html
+++ b/public/admin_default.html
@@ -96,6 +96,22 @@
         </div>
 
 
+        <md-tabs md-selected="selectedIndex" md-border-bottom md-autoselect>
+            <md-tab ng-repeat="branch in branches"
+                    ng-disabled="branch.disabled"
+                    label="{{branch.title}}">
+                <div class="demo-tab branch{{$index%4}}" style="padding: 25px; text-align: center;">
+                    <md-list-item ng-repeat="student in branch.students">
+
+                    <md-checkbox class="md-primary" ng-model="student.eligible" ng-checked="pr();">
+
+                    </md-checkbox>
+                    <p style="text-align: left;">{{ student.name }}</p>
+                    </md-list-item>
+                </div>
+            </md-tab>
+        </md-tabs>
+
 
     </md-content>
 </div>
