Added confirm dialog
Added confirm dialog to profile edits being made in the user console.

--- a/public/profile.html
+++ b/public/profile.html
@@ -9,7 +9,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <md-button class="md-raised " ng-click="editableInput=false; go();">SAVE</md-button>
+                <md-button class="md-raised " ng-click="editableInput=false; showAdvanced($event); ">SAVE</md-button>
             </div>
             <div layout-gt-sm="row">
                 <md-input-container class="md-block" flex-gt-xs="">
