--- a/public/marks.html
+++ b/public/marks.html
@@ -5,7 +5,7 @@
                 <md-content class="md-padding">
                     <md-input-container class="md-block" flex-gt-xs="">
                         <label>10th Percentage</label>
-                        <input name="score" ng-model="tenth_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2">
+                        <input name="score" ng-model="tenth_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2" ng-disabled="!editableInput">
                     </md-input-container>
                 </md-content>
             </md-tab>
@@ -13,7 +13,7 @@
                 <md-content class="md-padding">
                     <md-input-container class="md-block" flex-gt-xs="">
                     <label>12th Percentage</label>
-                    <input name="score" ng-model="tw_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2">
+                    <input name="score" ng-model="tw_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2" ng-disabled="!editableInput">
                         </md-input-container>
                 </md-content>
             </md-tab>
@@ -21,7 +21,7 @@
                 <md-content class="md-padding">
                     <md-input-container class="md-block" flex-gt-xs="">
                     <label>1st sem</label>
-                    <input name="score" ng-model="sem1_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2">
+                    <input name="score" ng-model="sem1_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2" ng-disabled="!editableInput">
                         </md-input-container>
                 </md-content>
             </md-tab>
@@ -29,7 +29,7 @@
                 <md-content class="md-padding">
                     <md-input-container class="md-block" flex-gt-xs="">
                     <label>2nd sem</label>
-                    <input name="score" ng-model="sem2_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2">
+                    <input name="score" ng-model="sem2_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2" ng-disabled="!editableInput">
                         </md-input-container>
                 </md-content>
             </md-tab>
@@ -37,7 +37,7 @@
                 <md-content class="md-padding">
                     <md-input-container class="md-block" flex-gt-xs="">
                     <label>3rd sem</label>
-                    <input name="score" ng-model="sem3_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2">
+                    <input name="score" ng-model="sem3_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2" ng-disabled="!editableInput">
                         </md-input-container>
                 </md-content>
             </md-tab>
@@ -45,7 +45,7 @@
                 <md-content class="md-padding">
                     <md-input-container class="md-block" flex-gt-xs="">
                     <label>4th sem</label>
-                    <input name="score" ng-model="sem4_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2">
+                    <input name="score" ng-model="sem4_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2" ng-disabled="!editableInput">
                         </md-input-container>
                 </md-content>
             </md-tab>
@@ -53,7 +53,7 @@
                 <md-content class="md-padding">
                     <md-input-container class="md-block" flex-gt-xs="">
                     <label>5th sem</label>
-                    <input name="score" ng-model="sem5_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2">
+                    <input name="score" ng-model="sem5_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2" ng-disabled="!editableInput">
                         </md-input-container>
                 </md-content>
             </md-tab>
@@ -61,7 +61,7 @@
                 <md-content class="md-padding">
                     <md-input-container class="md-block" flex-gt-xs="">
                     <label>6th sem</label>
-                    <input name="score" ng-model="sem6_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2">
+                    <input name="score" ng-model="sem6_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2" ng-disabled="!editableInput">
                         </md-input-container>
                 </md-content>
             </md-tab>
@@ -69,7 +69,7 @@
                 <md-content class="md-padding">
                     <md-input-container class="md-block" flex-gt-xs="">
                     <label>7th sem</label>
-                    <input name="score" ng-model="sem7_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2">
+                    <input name="score" ng-model="sem7_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2" ng-disabled="!editableInput">
                         </md-input-container>
                 </md-content>
             </md-tab>
@@ -77,11 +77,18 @@
                 <md-content class="md-padding">
                     <md-input-container class="md-block" flex-gt-xs="">
                     <label>8th sem</label>
-                    <input name="score" ng-model="sem8_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2">
+                    <input name="score" ng-model="sem8_score" required ng-pattern="/^[0-9]{2}$/" md-maxlength="2" ng-disabled="!editableInput">
                         </md-input-container>
                 </md-content>
             </md-tab>
             </md-tabs>
     </md-content>
-
+    <div class="sample" layout="row" layout-align="center">
+    <md-button class="md-raised md-warn" ng-click="editableInput=true">EDIT</md-button>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <md-button class="md-raised " ng-click="editableInput=false; showAdvanced($event); ">SAVE</md-button>
+    </div>
 </div>
