--- a/public/admin_default.html
+++ b/public/admin_default.html
@@ -9,7 +9,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <md-button class="md-raised " ng-click="go();">SEND NOTIFICATION</md-button>
+                    <md-button class="md-raised " ng-click="send();">SEND NOTIFICATION</md-button>
                 </div>
                 <div layout-gt-sm="row">
                     <md-input-container class="md-block" flex-gt-xs="">
@@ -73,7 +73,7 @@
 
 
 
-                <md-chips ng-model="roFruitNames" ng-click="getSelectedChipIndex($event);">
+                <md-chips ng-model="branchNames" >
                     <md-chip-template>
                         <strong>{{$chip}}</strong>
 
@@ -85,11 +85,11 @@
                     <div flex="10" layout layout-align="center center">
                         <span class="md-body-1">B.Tech CGPA Cutoff</span>
                     </div>
-                    <md-slider flex step="0.01" min="0" max="10" ng-model="color.red" aria-label="red" id="red-slider" class>
+                    <md-slider flex step="0.01" min="0" max="10" ng-model="cutoff_cgpa" aria-label="red" id="red-slider" class>
                     </md-slider>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <div flex="20" layout layout-align="center center">
-                        <input flex type="number" ng-model="color.red" aria-label="red" aria-controls="red-slider">
+                        <input flex type="number" ng-model="cutoff_cgpa" aria-label="red" aria-controls="red-slider">
                     </div>
                 </div>
             </form>
