--- a/public/admin_default.html
+++ b/public/admin_default.html
@@ -1,4 +1,4 @@
-<div layout="row" layout-align="center center" style="width: 100%;">
+<div layout="row" layout-align="center center" style="width: 100%;height: 100vh;">
     <md-content layout-padding="" style="overflow: hidden;">
 
         <div >
@@ -7,9 +7,10 @@
                     <md-button class="md-raised md-warn" ng-click="clear();">CLEAR</md-button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <md-button class="md-raised " ng-click="send();disabled=true;">SHOW STUDENTS</md-button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <md-button class="md-raised " ng-click="send();">SEND NOTIFICATION</md-button>
+                    <md-button class="md-raised " ng-click="send();disabled=false" ng-disabled="!disabled;">SEND NOTIFICATIONS</md-button>
                 </div>
                 <div layout-gt-sm="row">
                     <md-input-container class="md-block" flex-gt-xs="">
