--- a/public/admin_default.html
+++ b/public/admin_default.html
@@ -1,4 +1,4 @@
-<div layout="row" layout-align="center center" style="width: 100%;height: 100vh;">
+<div layout="row" layout-align="center center" style="width: 100%;">
     <md-content layout-padding="" style="overflow: hidden;">
 
         <div >
