--- a/public/admin_default.html
+++ b/public/admin_default.html
@@ -43,6 +43,11 @@
                         <input ng-model="jobRole">
                     </md-input-container>
 
+                    <md-input-container class="md-block" flex-gt-xs="">
+                        <label>Company Logo URL</label>
+                        <input ng-model="logoUrl">
+                    </md-input-container>
+
                     <md-input-container class="md-block">
                         <label>Job Description</label>
                         <textarea ng-model="jobDescription" columns="1" md-maxlength="1300" rows="5" ></textarea>
