Implemented dynamic fetching from the database

--- a/public/admin_default.html
+++ b/public/admin_default.html
@@ -23,7 +23,7 @@
                 <div layout-gt-xs="row">
                     <md-input-container class="md-block" flex-gt-xs="">
                         <label>CTC</label>
-                        <input name="CostToCompany" ng-model="ctc" required="" ng-pattern="/^[0-9]{10}$/" md-maxlength="10">
+                        <input name="CostToCompany" ng-model="ctc" required="" md-maxlength="10">
                     </md-input-container>
 
 
