Added attendance fetching of companies which have visited for the placement drives

--- a/public/admin_attendance.html
+++ b/public/admin_attendance.html
@@ -4,8 +4,8 @@
         <div >
             <form name="userForm">
                 <md-select ng-model="selected_drive">
-                    <md-option ng-repeat="drive in drives" value="{{drive.abbrev}}">
-                        {{drive.abbrev}}
+                    <md-option ng-repeat="drive in drives" value="{{drive}}">
+                        {{drive}}
                     </md-option>
                 </md-select>
                 <div class="bottom-sheet-demo inset" layout="row" layout-sm="column" layout-align="center" >
