--- a/public/admin_attendance.html
+++ b/public/admin_attendance.html
@@ -15,7 +15,7 @@
                     <md-button class="md-raised " ng-click="go();disabled=true;" >SHOW STUDENTS</md-button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <md-button class="md-raised md-primary" ng-click="go();disabled=false;" ng-disabled="!disabled">POST ATTENDANCE</md-button>
+                    <md-button class="md-raised md-primary" ng-click="publish();disabled=false;" ng-disabled="!disabled">POST ATTENDANCE</md-button>
                 </div>
 
             </form>
@@ -29,10 +29,10 @@
                 <div class="demo-tab branch{{$index%4}}" style="padding: 25px; text-align: center;">
                     <md-list-item ng-repeat="student in branch.students">
 
-                        <md-checkbox class="md-primary" ng-model="student.eligible" ng-checked="pr();">
+                        <md-checkbox class="md-primary" ng-model="student.attendance" >
 
                         </md-checkbox>
-                        <p style="text-align: left;">{{ student.name }}</p>
+                        <p style="text-align: left;">{{ student.pin }}</p>
                     </md-list-item>
                 </div>
             </md-tab>
