Added local src files instead of cdn

--- a/public/admin_default.html
+++ b/public/admin_default.html
@@ -112,7 +112,7 @@
                         <md-checkbox class="md-primary" ng-model="student.eligible">
 
                         </md-checkbox>
-                        <p style="text-align: left;">{{ student.name }}</p>
+                        <p style="text-align: left;">{{ student.name }}:{{ student.pin}}</p>
                     </md-list-item>
                 </div>
             </md-tab>
