--- a/public/admin_default.html
+++ b/public/admin_default.html
@@ -15,7 +15,7 @@
                 <div layout-gt-sm="row">
                     <md-input-container class="md-block" flex-gt-xs="">
                         <label>Company name</label>
-                        <input ng-model="companyName">
+                        <input ng-model="companyName" required="Mandatory">
                     </md-input-container>
 
                 </div>
@@ -27,7 +27,7 @@
                     </md-input-container>
 
 
-                    <md-datepicker ng-model="dateOfPlacementDrive" md-placeholder="Date of Placement" >
+                    <md-datepicker ng-model="dateOfPlacementDrive" required="" md-placeholder="Date of Placement" >
                         <label>Date of Placement Drive</label>
                     </md-datepicker>
                 </div>
@@ -35,37 +35,37 @@
                 <div layout-gt-xs="column">
                     <md-input-container class="md-block" flex-gt-xs="">
                         <label>Company Type</label>
-                        <input ng-model="companyType">
+                        <input ng-model="companyType" required="">
                     </md-input-container>
 
                     <md-input-container class="md-block" flex-gt-xs="">
                         <label>Job Role</label>
-                        <input ng-model="jobRole">
+                        <input ng-model="jobRole" required="">
                     </md-input-container>
 
                     <md-input-container class="md-block" flex-gt-xs="">
                         <label>Company Logo URL</label>
-                        <input ng-model="logoUrl">
+                        <input ng-model="logoUrl" required="">
                     </md-input-container>
 
                     <md-input-container class="md-block">
                         <label>Job Description</label>
-                        <textarea ng-model="jobDescription" columns="1" md-maxlength="1300" rows="5" ></textarea>
+                        <textarea ng-model="jobDescription" columns="1" md-maxlength="1300" rows="5" required="" ></textarea>
                     </md-input-container>
 
                     <md-input-container class="md-block">
                         <label>Placement Drive Process</label>
-                        <textarea ng-model="driveProcess" columns="1" md-maxlength="1300" rows="5" ></textarea>
+                        <textarea ng-model="driveProcess" columns="1" md-maxlength="1300" rows="5" required="" ></textarea>
                     </md-input-container>
 
                     <md-input-container class="md-block" flex-gt-xs="">
                         <label>Venue</label>
-                        <input ng-model="venue" >
+                        <input ng-model="venue" required="" >
                     </md-input-container>
 
                     <md-input-container class="md-block" flex-gt-xs="">
                         <label>Reporting time</label>
-                        <input ng-model="reportingTime">
+                        <input ng-model="reportingTime" required="">
                     </md-input-container>
 
                 </div>
@@ -74,7 +74,7 @@
 
                 <md-input-container class="md-block">
                     <label>Company Description</label>
-                    <textarea ng-model="companyDescription" columns="1" md-maxlength="300" rows="5" ></textarea>
+                    <textarea ng-model="companyDescription" columns="1" md-maxlength="300" rows="5" required="" ></textarea>
                 </md-input-container>
 
 
@@ -91,11 +91,11 @@
                     <div flex="10" layout layout-align="center center">
                         <span class="md-body-1">B.Tech CGPA Cutoff</span>
                     </div>
-                    <md-slider flex step="0.01" min="0" max="10" ng-model="cutoff_cgpa" aria-label="red" id="red-slider" class>
+                    <md-slider flex step="0.01" min="0" max="10" ng-model="cutoff_cgpa" required="" aria-label="red" id="red-slider" class>
                     </md-slider>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <div flex="20" layout layout-align="center center">
-                        <input flex type="number" ng-model="cutoff_cgpa" aria-label="red" aria-controls="red-slider">
+                        <input flex type="number" ng-model="cutoff_cgpa" aria-label="red" aria-controls="red-slider" required="">
                     </div>
                 </div>
             </form>
