Implemented reject option of approvals

--- a/public/approvals.html
+++ b/public/approvals.html
@@ -88,7 +88,7 @@
         </md-tabs>
     </md-content>
     <div class="md-actions" layout="row" layout-align="end center">
-        <md-button class="md-raised md-warn">Reject</md-button>
-        <md-button class="md-raised" >Accept</md-button>
+        <md-button class="md-raised md-warn" ng-click="reject($index);">Reject</md-button>
+        <md-button class="md-raised" ng-click="accept($index);">Accept</md-button>
     </div>
 </md-card>
