Added dialog view and few backend fixes
added dialog view for details of company
Reduced the timeout period for calls to the server

--- a/public/default.html
+++ b/public/default.html
@@ -5,7 +5,6 @@
         <p>{{user.JD}}</p>
     </md-card-content>
     <div class="md-actions" layout="row" layout-align="end center">
-        <md-button>Reject(chances)</md-button>
-        <md-button>View</md-button>
+        <md-button ng-click="dialog_company(user.company_name)">View</md-button>
     </div>
 </md-card>
